Remove JDK --preview flag