@@ -89,7 +89,7 @@
                     <!-- -Dtests.security.manager=false is needed otherwise the ESTestCase fails to initialize -->
                     <argLine>-Xms384m -Xmx2g -XX:+HeapDumpOnOutOfMemoryError
                         -Dtests.security.manager=false -Dlog4j.configurationFile=log4j2.properties
-                        --enable-preview</argLine>
+                    </argLine>
                 </configuration>
             </plugin>
         </plugins>
