@@ -94,10 +94,6 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>${compiler.plugin.version}</version>
-                <configuration>
-                    <!-- Enable preview features for compilation -->
-                    <compilerArgs>--enable-preview</compilerArgs>
-                </configuration>
                 <!-- Custom compilation mode -->
                 <executions>
                     <execution>
